# motile_toolbox

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  conda_config.yml  justfile  mypy.ini  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yaml  deploy.yaml  docs.yaml  mypy.yaml  tests.yaml
src/motile_toolbox/: __init__.py
src/motile_toolbox/candidate_graph/: __init__.py  compute_graph.py  conflict_sets.py  graph_attributes.py  graph_from_segmentation.py  graph_to_nx.py  iou.py  multi_seg_graph.py  regionprops_extended.py  utils.py
src/motile_toolbox/tracks/: tracks.py
src/motile_toolbox/utils/: __init__.py  flow.py  loading_utils.py  relabel_segmentation.py  saving_utils.py
src/motile_toolbox/visualization/: __init__.py  napari_utils.py  plot_motile_graphs.py
tests/: conftest.py
tests/data/: attribution.md  sample_tracks.csv
tests/test_candidate_graph/: test_compute_graph.py  test_conflict_sets.py  test_features.py  test_graph_from_segmentation.py  test_graph_to_nx.py  test_iou.py  test_utils.py
tests/test_utils/: test_relabel_segmentation.py  test_saving_utils.py
tests/utils/: test_loading_utils.py
tests/visualization/: test_plot.py
