[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "motile_toolbox"
description = "A toolbox for tracking with (motile)[https://github.com/funkelab/motile]."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "malinmayorc@janelia.hhmi.org", name = "Funke Lab" },
]
dynamic = ["version"]
dependencies = [
  "motile",
  "networkx",
  "numpy",
  "matplotlib",
  "scikit-image",
  "tqdm",
  "zarr",
]

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-cov',
  'black',
  'mypy',
  'pdoc',
  'pre-commit',
  'types-tqdm',
]

[project.urls]
homepage = "https://github.com/funkelab/motile_toolbox"
repository = "https://github.com/funkelab/motile_toolbox"

[tool.coverage.run]
omit = ["src/motile_toolbox/visualization/*"]
